# AtomicHabit

./: .coverage  .env.sample  .flake8  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options.py
tg_bot/: models.py  tasks.py
tg_bot/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
